[project]
name = "swarm-handoffs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "deepagents>=0.6.7",
    "langchain>=1.3.1",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langgraph-swarm>=0.1.0",
    "mcp-server-motherduck>=1.0.7",
    "python-dotenv>=1.2.2",
]
